--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roamers Homestay</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <!--nav bar-->
+    <div class="container1">
+        <a href="#" alt="homestay-logo">
+            <img src="./Assets/Roamers-Homestay-Main-Logo.png" alt="Roamers Homestay">
+        </a>
+    </div>
 
 </body>
 
