--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
 
     <!--nav bar-->
     <div class="container1">
-        <a href="#" alt="homestay-logo">
+        <a href="#" alt="homestay-logo" class="home">
             <img src="./Assets/Roamers-Homestay-Main-Logo.png" alt="Roamers Homestay">
         </a>
+        <li class="home">
+            <ul>Home</ul>
+            <ul>About Us</ul>
+            <ul>Reversation</ul>
+            <ul>Nearby</ul>
+            <ul>Gallery</ul>
+            <ul>Contact Us</ul>
+        </li>
     </div>
+
 
 </body>
 
