--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal</title>
+    <title>Jayant Singh - Programmer, Full Stack Developer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="sidebar">
+        Jayant
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>My Intro</li>
+                <li>Services</li>
+                <li>CV</li>
+                <li>Blog</li>
+            </ul>
+        </nav>
+    </div>
 </body>
 
 </html>
